test eval on constructor and variable